Updated alacritty color scheme

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,5 @@
 font:
-  size: 12
+  size: 13
   normal:
     family: MesloLGS Nerd Font Mono
     style: Regular
@@ -11,26 +11,37 @@ font:
     family: MesloLGS Nerd Font Mono
 
 colors:
+  # Default colors
   primary:
-    background: '0x262d3e'
+    background: '0x122637'
     foreground: '0xffffff'
+
+  # Colors the cursor will use if `custom_cursor_colors` is true
+  cursor:
+    text: '0x122637'
+    cursor: '0xf0cb09'
+
+  # Normal colors
   normal:
-    black:   '0x292d3e'
-    red:     '0xf07178'
-    green:   '0xc3e88d'
-    yellow:  '0xffcb6b'
-    blue:    '0x82aaff'
-    magenta: '0xc792ea'
-    cyan:    '0x89ddff'
-    white:   '0xd0d0d0'
+    black:   '0x000000'
+    red:     '0xff0000'
+    green:   '0x37dd21'
+    yellow:  '0xfee409'
+    blue:    '0x1460d2'
+    magenta: '0xff005d'
+    cyan:    '0x00bbbb'
+    white:   '0xbbbbbb'
+
+  # Bright colors
   bright:
-    black:   '0x434758'
-    red:     '0xff8b62'
-    green:   '0xddffa7'
-    yellow:  '0xffe585'
-    blue:    '0x9cc5ff'
-    magenta: '0xe1acff'
-    cyan:    '0xa3f7ff'
+    black:   '0x545454'
+    red:     '0xf40d17'
+    green:   '0x3bcf1d'
+    yellow:  '0xecc809'
+    blue:    '0x5555ff'
+    magenta: '0xff55ff'
+    cyan:    '0x6ae3f9'
     white:   '0xffffff'
 
-background_opacity: 0.80
+window:
+  opacity: 0.80
