--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,14 +1,14 @@
 font:
   size: 12
   normal:
-    family: MesloLGS Nerd Font Mono
+    family: FiraCode Nerd Font Mono
     style: Regular
   bold:
-    family: MesloLGS Nerd Font Mono
+    family: FiraCode Nerd Font Mono
   itaic:
-    family: MesloLGS Nerd Font Mono
+    family: FiraCode Nerd Font Mono
   bold_italic:
-    family: MesloLGS Nerd Font Mono
+    family: FiraCode Nerd Font Mono
 
 colors:
   primary:
