hyprland settings changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ exec-once = nm-applet
 exec-once = blueman-applet
 exec-once = lxsession
 exec-once = hyprpaper
-exec-once = emacs --daemon
+exec = emacs --daemon
 exec = sleep 1 && ~/.config/hypr/scripts/set_wallpaper.sh
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
@@ -22,6 +22,7 @@ workspace = 2,eDP-1
 # Window Rules
 windowrulev2 = tile,workspace 7,class:^(Spotify)$
 windowrulev2 = fullscreen,noborder,class:^(steam_app.*)$
+windowrulev2 = fullscreen,noborder,class:^(gamescope)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -129,12 +130,13 @@ bind = $mainMod, X, exec, alacritty
 bind = $mainMod, E, exec, nemo
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, B, exec, firefox
+bind = $mainMod, C, exec, emacsclient -c
 bind = $mainMod SHIFT, B, exec, firefox --private
 
 # Audio
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
-bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
+binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
+binde = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # Brightness
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
@@ -143,6 +145,7 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl set -5%
 # Hyprland nav
 bind = $mainMod, Q, killactive 
 bind = $mainMod, F, togglefloating 
+bind = $mainMod SHIFT, F, fullscreen 
 bind = $mainMod SHIFT, L, exec, $HOME/.config/hypr/scripts/lock.sh
 bind = $mainMod SHIFT, Q, exec, hyprctl dispatch exit 0
 bind = $mainMod SHIFT, S, exec, wlogout
