Hyprland config updates

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,20 +3,22 @@
 # For a full list, see the wiki
 #
 #
+source=~/.config/hypr/themes/mocha.conf
 exec-once = waybar
 exec-once = nm-applet
-exec-once = blueman-applet
 exec-once = lxsession
 exec-once = hyprpaper
+exec-once = blueman-applet
+exec-once = ~/.config/hypr/scripts/screen_cap.sh
 exec = emacs --daemon
 exec = sleep 1 && ~/.config/hypr/scripts/set_wallpaper.sh
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1,1920x1080@144,1920x0,1.25
-monitor = HDMI-A-1,1920x1080@60,0x0,1
+monitor = eDP-1,1920x1080@144,0x0,1.25
+#monitor = HDMI-A-1,1920x1080@60,0x0,1
 
 # Initial Workspace Settings
-workspace = 1,HDMI-A-1
+#workspace = 1,HDMI-A-1
 workspace = 2,eDP-1
 
 # Window Rules
@@ -46,9 +48,11 @@ input {
         natural_scroll = yes
         clickfinger_behavior = no
         tap-to-click = yes
+        scroll_factor = 0.5
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    accel_profile = "adaptive"
 }
 
 general {
@@ -57,8 +61,8 @@ general {
     gaps_in = 5
     gaps_out = 5
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $mauve
+    col.inactive_border = $teal
 
     layout = master
 }
@@ -68,9 +72,11 @@ decoration {
 
     rounding = 5
     blur = yes
-    blur_size = 1
-    blur_passes = 2
+    blur_size = 3
+    blur_passes = 3
     blur_new_optimizations = on
+    active_opacity = 1.0
+    inactive_opacity = 1.0
 
     drop_shadow = yes
     shadow_range = 4
@@ -108,18 +114,6 @@ gestures {
     workspace_swipe = on
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -137,6 +131,11 @@ bind = $mainMod SHIFT, B, exec, firefox --private
 binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
 binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
 binde = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+
+# Player
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
 
 # Brightness
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
@@ -177,13 +176,13 @@ bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
