--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,9 +22,10 @@ monitor = eDP-1,1920x1080@144,0x0,1.25
 workspace = 2,eDP-1
 
 # Window Rules
-windowrulev2 = tile,workspace 7,class:^(Spotify)$
+windowrulev2 = tile,workspace 7 silent,nofullscreenrequest,class:^(Spotify)$
 windowrulev2 = fullscreen,noborder,class:^(steam_app.*)$
 windowrulev2 = fullscreen,noborder,class:^(gamescope)$
+windowrulev2 = float,class=^(firefox)$,title:^(.*Developer Tools.*)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -59,10 +60,10 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 5
+    gaps_out = 8
     border_size = 2
-    col.active_border = $mauve
-    col.inactive_border = $teal
+    col.active_border = $crust
+    col.inactive_border = $subtext1
 
     layout = master
 }
@@ -138,8 +139,8 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
 # Brightness
-bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
-bind = , XF86MonBrightnessDown, exec, brightnessctl set -5%
+binde = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+binde = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 
 # Hyprland nav
 bind = $mainMod, Q, killactive 
