--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,19 +1,14 @@
-#
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-#
-#
 source=~/.config/hypr/themes/mocha.conf
-exec-once = waybar
-exec-once = nm-applet
+exec-once = nm-applet --indicator
 exec-once = lxsession
 exec-once = hyprpaper
 exec-once = blueman-applet
-exec-once = ~/.config/hypr/scripts/screen_cap.sh
+exec-once = mailspring -b
+exec-once = ~/.config/hypr/scripts/launch-waybar.sh
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec = emacs --daemon
 exec = sleep 1 && ~/.config/hypr/scripts/set_wallpaper.sh
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1,1920x1080@144,0x0,1.25
 #monitor = HDMI-A-1,1920x1080@60,0x0,1
 
@@ -22,10 +17,11 @@ monitor = eDP-1,1920x1080@144,0x0,1.25
 workspace = 2,eDP-1
 
 # Window Rules
-windowrulev2 = tile,workspace 7 silent,nofullscreenrequest,class:^(Spotify)$
+windowrule = tile,workspace 7,nofullscreenrequest,^(Spotify)$
 windowrulev2 = fullscreen,noborder,class:^(steam_app.*)$
 windowrulev2 = fullscreen,noborder,class:^(gamescope)$
-windowrulev2 = float,class=^(firefox)$,title:^(.*Developer Tools.*)$
+windowrule = float,title:^(Developer Tools)(.*)$
+windowrule = float,^(zoom)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -62,8 +58,8 @@ general {
     gaps_in = 5
     gaps_out = 8
     border_size = 2
-    col.active_border = $crust
-    col.inactive_border = $subtext1
+    col.active_border = $subtext1
+    col.inactive_border = $crust
 
     layout = master
 }
@@ -190,5 +186,5 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = $mainMod, mouse:272, resizewindow
+bindm = $mainMod, mouse:273, movewindow
