--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,65 +1,50 @@
-add_newline = false
+format = """
+[](#cdd6f4)\
+$sudo\
+[  ](bg:#cdd6f4 fg:#11111b)\
+[](bg:#89b4fa fg:#cdd6f4)\
+$directory\
+[](fg:#89b4fa bg:#313244)\
+$git_branch\
+$git_status\
+[](fg:#313244 bg:#11111b)\
+$nodejs\
+$c\
+$rust\
+[](fg:#11111b)\
+$character"""
 
-[line_break]
-disabled = true
+right_format="""
+[](fg:#181825)
+$cmd_duration\
+[](fg:#181825 bg:#cba6f7)\
+[  ](fg:#11111b bg:#cba6f7)\
+[](fg:#cba6f7)"""
 
-[aws]
-format = '\[[$symbol($profile)(\($region\))(\[$duration\])]($style)\]'
-symbol = "  "
+[sudo]
+disabled = false
+symbol = ""
+style = "bg:#cdd6f4 fg:#11111b"
+format = '[\[$symbol\]]($style)'
 
-[cmake]
-format = '\[[$symbol($version)]($style)\]'
-
-[cmd_duration]
-format = '\[[⏱ $duration]($style)\]'
-
-[cobol]
-format = '\[[$symbol($version)]($style)\]'
-
-[conda]
-format = '\[[$symbol$environment]($style)\]'
-symbol = " "
-
-[crystal]
-format = '\[[$symbol($version)]($style)\]'
-
-[dart]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[deno]
-format = '\[[$symbol($version)]($style)\]'
+[character]
+disabled = false
+format = " "
 
 [directory]
-read_only = " "
-
-[docker_context]
-format = '\[[$symbol$context]($style)\]'
-symbol = " "
-
-[dotnet]
-format = '\[[$symbol($version)(🎯 $tfm)]($style)\]'
-
-[elixir]
-format = '\[[$symbol($version \(OTP $otp_version\))]($style)\]'
-symbol = " "
-
-[elm]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[erlang]
-format = '\[[$symbol($version)]($style)\]'
-
-[gcloud]
-format = '\[[$symbol$account(@$domain)(\($region\))]($style)\]'
+style = "fg:#45475a bg:#89b4fa"
+read_only = ""
+format = "[ $path $read_only ]($style)"
+truncation_length = 3
+truncation_symbol = "…/"
 
 [git_branch]
-format = '\[[$symbol$branch]($style)\]'
-symbol = " "
+symbol = ""
+style = "bg:#313244"
+format = '[[ $symbol $branch ](fg:#89b4fa bg:#313244)]($style)'
 
 [git_status]
-conflicted = "="
+style = "bg:#313244"
 ahead = "$count⇡"
 behind = "$count⇣"
 diverged = "$ahead_count $behind_count⇕"
@@ -69,119 +54,30 @@ modified = "$count!"
 staged = "$count+"
 renamed = "$count»"
 deleted = "$count✘"
-format = '([\[$all_status$ahead_behind\]]($style))'
+format = '[[($all_status$ahead_behind )](fg:#89b4fa bg:#313244)]($style)'
 
-[golang]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[helm]
-format = '\[[$symbol($version)]($style)\]'
-
-[hg_branch]
-format = '\[[$symbol$branch]($style)\]'
-symbol = " "
-
-[java]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[julia]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[kotlin]
-format = '\[[$symbol($version)]($style)\]'
-
-[kubernetes]
-format = '\[[$symbol$context( \($namespace\))]($style)\]'
+[c]
+symbol = "ﭰ"
+style = "bg:#11111b"
+format = '[[ $symbol ($version) ](fg:#89b4fa bg:#11111b)]($style)'
 
 [lua]
-format = '\[[$symbol($version)]($style)\]'
-
-[memory_usage]
-format = '\[$symbol[$ram( | $swap)]($style)\]'
-disabled = true
-
-[nim]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[nix_shell]
-format = '\[[$symbol$state( \($name\))]($style)\]'
-symbol = " "
+symbol = ""
+style = "bg:#11111b"
+format = '[[ $symbol ($version) ](fg:#89b4fa bg:#11111b)]($style)'
 
 [nodejs]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[ocaml]
-format = '\[[$symbol($version)(\($switch_indicator$switch_name\))]($style)\]'
-
-[openstack]
-format = '\[[$symbol$cloud(\($project\))]($style)\]'
-
-[package]
-format = '\[[$symbol$version]($style)\]'
-symbol = " "
-
-[perl]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[php]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[pulumi]
-format = '\[[$symbol$stack]($style)\]'
-
-[purescript]
-format = '\[[$symbol($version)]($style)\]'
-
-[python]
-format = '\[[${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style)\]'
-symbol = " "
-
-[red]
-format = '\[[$symbol($version)]($style)\]'
-
-[ruby]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
+symbol = ""
+style = "bg:#11111b"
+format = '[[ $symbol ($version) ](fg:#89b4fa bg:#11111b)]($style)'
 
 [rust]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
+symbol = ""
+style = "bg:#11111b"
+format = '[[ $symbol ($version) ](fg:#89b4fa bg:#11111b)]($style)'
 
-[scala]
-format = '\[[$symbol($version)]($style)\]'
-symbol = " "
-
-[sudo]
-format = '\[[as $symbol]\]'
-
-[shlvl]
-symbol = " "
-
-[swift]
-format = '\[[$symbol($version)]($style)\]'
-symbol = "ﯣ "
-
-[terraform]
-format = '\[[$symbol$workspace]($style)\]'
-
-[time]
-format = '\[[$time]($style)\]'
-
-[username]
-format = '\[[$user]($style)\]'
-
-[vagrant]
-format = '\[[$symbol($version)]($style)\]'
-
-[vlang]
-format = '\[[$symbol($version)]($style)\]'
-
-[zig]
-format = '\[[$symbol($version)]($style)\]'
+[cmd_duration]
+disabled = false
+min_time = 0
+style = "bg:#181825"
+format = '[[ $duration ](fg:#7f849c bg:#181825)]($style)'
