--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -15,5 +15,6 @@ preload = ~/wallpapers/14.jpg
 preload = ~/wallpapers/15.jpg
 preload = ~/wallpapers/16.jpg
 preload = ~/wallpapers/17.jpg
+preload = ~/wallpapers/18.jpg
 wallpaper = eDP-1,~/wallpapers/1.jpg
 wallpaper = HDMI-A-1,~/wallpapers/1.jpg
