--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -4,20 +4,20 @@ $sudo\
 [  ](bg:#cdd6f4 fg:#11111b)\
 [](bg:#89b4fa fg:#cdd6f4)\
 $directory\
-[](fg:#89b4fa bg:#313244)\
+[](fg:#89b4fa bg:#585b70)\
 $git_branch\
 $git_status\
-[](fg:#313244 bg:#11111b)\
+[](fg:#585b70 bg:#313244)\
 $nodejs\
 $c\
 $rust\
-[](fg:#11111b)\
+[](fg:#313244)\
 $character"""
 
 right_format="""
-[](fg:#181825)
+[](fg:#11111b)
 $cmd_duration\
-[](fg:#181825 bg:#cba6f7)\
+[](fg:#11111b bg:#cba6f7)\
 [  ](fg:#11111b bg:#cba6f7)\
 [](fg:#cba6f7)"""
 
@@ -40,11 +40,11 @@ truncation_symbol = "…/"
 
 [git_branch]
 symbol = ""
-style = "bg:#313244"
-format = '[[ $symbol $branch ](fg:#89b4fa bg:#313244)]($style)'
+style = "bg:#585b70"
+format = '[[ $symbol $branch ](fg:#89b4fa bg:#585b70)]($style)'
 
 [git_status]
-style = "bg:#313244"
+style = "bg:#585b70"
 ahead = "$count⇡"
 behind = "$count⇣"
 diverged = "$ahead_count $behind_count⇕"
@@ -54,30 +54,30 @@ modified = "$count!"
 staged = "$count+"
 renamed = "$count»"
 deleted = "$count✘"
-format = '[[($all_status$ahead_behind )](fg:#89b4fa bg:#313244)]($style)'
+format = '[[($all_status$ahead_behind )](fg:#89b4fa bg:#585b70)]($style)'
 
 [c]
 symbol = "ﭰ"
-style = "bg:#11111b"
-format = '[[ $symbol ($version) ](fg:#89b4fa bg:#11111b)]($style)'
+style = "bg:#313244"
+format = '[[ $symbol ($version) ](fg:#89b4fa bg:#313244)]($style)'
 
 [lua]
 symbol = ""
-style = "bg:#11111b"
-format = '[[ $symbol ($version) ](fg:#89b4fa bg:#11111b)]($style)'
+style = "bg:#313244"
+format = '[[ $symbol ($version) ](fg:#89b4fa bg:#313244)]($style)'
 
 [nodejs]
 symbol = ""
-style = "bg:#11111b"
-format = '[[ $symbol ($version) ](fg:#89b4fa bg:#11111b)]($style)'
+style = "bg:#313244"
+format = '[[ $symbol ($version) ](fg:#89b4fa bg:#313244)]($style)'
 
 [rust]
 symbol = ""
-style = "bg:#11111b"
-format = '[[ $symbol ($version) ](fg:#89b4fa bg:#11111b)]($style)'
+style = "bg:#313244"
+format = '[[ $symbol ($version) ](fg:#89b4fa bg:#313244)]($style)'
 
 [cmd_duration]
 disabled = false
 min_time = 0
-style = "bg:#181825"
-format = '[[ $duration ](fg:#7f849c bg:#181825)]($style)'
+style = "bg:#11111b"
+format = '[[ $duration ](fg:#7f849c bg:#11111b)]($style)'
