--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,18 +1,18 @@
 font:
   size: 12
   normal:
-    family: JetBrains Mono Nerd Font Mono
+    family: FiraCode Nerd Font Mono
     style: Regular
   bold:
-    family: JetBrains Mono Nerd Font Mono
+    family: FiraCode Nerd Font Mono
   itaic:
-    family: JetBrains Mono Nerd Font Mono
+    family: FiraCode Nerd Font Mono
   bold_italic:
-    family: JetBrains Mono Nerd Font Mono
+    family: FiraCode Nerd Font Mono
 
 colors:
   primary:
-    background: "#1E1E2E" # base
+    background: "#181825" # base
     foreground: "#CDD6F4" # text
     # Bright and dim foreground colors
     dim_foreground: "#CDD6F4" # text
@@ -20,36 +20,36 @@ colors:
 
   # Cursor colors
   cursor:
-    text: "#1E1E2E" # base
+    text: "#181825" # base
     cursor: "#F5E0DC" # rosewater
   vi_mode_cursor:
-    text: "#1E1E2E" # base
+    text: "#181825" # base
     cursor: "#B4BEFE" # lavender
 
   # Search colors
   search:
     matches:
-      foreground: "#1E1E2E" # base
+      foreground: "#181825" # base
       background: "#A6ADC8" # subtext0
     focused_match:
-      foreground: "#1E1E2E" # base
+      foreground: "#181825" # base
       background: "#A6E3A1" # green
     footer_bar:
-      foreground: "#1E1E2E" # base
+      foreground: "#181825" # base
       background: "#A6ADC8" # subtext0
 
   # Keyboard regex hints
   hints:
     start:
-      foreground: "#1E1E2E" # base
+      foreground: "#181825" # base
       background: "#F9E2AF" # yellow
     end:
-      foreground: "#1E1E2E" # base
+      foreground: "#181825" # base
       background: "#A6ADC8" # subtext0
 
   # Selection colors
   selection:
-    text: "#1E1E2E" # base
+    text: "#181825" # base
     background: "#F5E0DC" # rosewater
 
   # Normal colors
@@ -91,7 +91,7 @@ colors:
 
 
 window:
-  opacity: 0.8
+  opacity: 1
   padding:
-    x: 5
+    x: 10
     y: 0
