--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,14 +6,14 @@ exec-once = blueman-applet
 exec-once = mailspring -b
 exec-once = ~/.config/hypr/scripts/launch-waybar.sh
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec = emacs --daemon
+exec-once=emacs --daemon
 exec = sleep 1 && ~/.config/hypr/scripts/set_wallpaper.sh
 
-monitor = eDP-1,1920x1080@144,0x0,1.25
-#monitor = HDMI-A-1,1920x1080@60,0x0,1
+monitor = HDMI-A-1,1920x1080@60,0x0,1
+monitor = eDP-1,1920x1080@144,1920x0,1.25
 
 # Initial Workspace Settings
-#workspace = 1,HDMI-A-1
+workspace = 1,HDMI-A-1
 workspace = 2,eDP-1
 
 # Window Rules
@@ -68,10 +68,7 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = yes
-    blur_size = 3
-    blur_passes = 3
-    blur_new_optimizations = on
+    blur = no
     active_opacity = 1.0
     inactive_opacity = 1.0
 
@@ -84,15 +81,17 @@ decoration {
 animations {
     enabled = yes
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier = easeInBack, 0.36, 0, 0.66, -0.56 
+    bezier = easeOutBack, 0.34, 1.56, 0.64, 1
+    bezier = easeInOutSine, 0.37, 0, 0.63, 1
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = windowsIn, 1, 5, easeOutBack, slide
+    animation = windowsOut, 1, 5, easeInBack, slide
+    animation = windowsMove, 1, 5, easeOutBack, slide
+    animation = border, 0, 1, default
+    animation = fade, 0, 1, default
+    animation = workspaces, 1, 5, default, slide
 }
 
 dwindle {
@@ -186,5 +185,5 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, resizewindow
-bindm = $mainMod, mouse:273, movewindow
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
