--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,13 +1,12 @@
 source=~/.config/hypr/themes/mocha.conf
 exec-once = nm-applet --indicator
 exec-once = lxsession
-exec-once = hyprpaper
 exec-once = blueman-applet
 exec-once = mailspring -b
 exec-once = ~/.config/hypr/scripts/launch-waybar.sh
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=emacs --daemon
-exec = sleep 1 && ~/.config/hypr/scripts/set_wallpaper.sh
+exec = ~/.config/hypr/scripts/set_wallpaper.sh
 
 monitor = HDMI-A-1,1920x1080@60,0x0,1
 monitor = eDP-1,1920x1080@144,1920x0,1.25
@@ -17,11 +16,12 @@ workspace = 1,HDMI-A-1
 workspace = 2,eDP-1
 
 # Window Rules
-windowrule = tile,workspace 7,nofullscreenrequest,^(Spotify)$
+windowrulev2 = tile,workspace 7,nofullscreenrequest,class:^(Spotify)$
 windowrulev2 = fullscreen,noborder,class:^(steam_app.*)$
 windowrulev2 = fullscreen,noborder,class:^(gamescope)$
-windowrule = float,title:^(Developer Tools)(.*)$
-windowrule = float,^(zoom)$
+windowrulev2 = float,title:^(Extension: \(MetaMask\) - MetaMask Notification — Mozilla Firefox)$
+windowrulev2 = float,title:^(Developer\ Tools)(.*)$
+windowrulev2 = float,title:^(.*)(Emulator)(.*)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -68,11 +68,13 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = no
+    blur = yes
+    blur_size = 5
+    blur_passes = 3
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = yes
+    drop_shadow = no
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
@@ -118,10 +120,11 @@ $mainMod = SUPER
 # Applications
 bind = $mainMod, X, exec, alacritty
 bind = $mainMod, E, exec, nemo
-bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, R, exec, rofi -show drun
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, C, exec, emacsclient -c
-bind = $mainMod SHIFT, B, exec, firefox --private
+#bind = $mainMod, C, exec, code
+bind = $mainMod, W, exec, ~/.config/hypr/scripts/windows.sh
 
 # Audio
 binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
