Switch to kitty from alacritty

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,7 +5,7 @@ exec-once = blueman-applet
 exec-once = mailspring -b
 exec-once = ~/.config/hypr/scripts/launch-waybar.sh
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=emacs --daemon
+#exec-once=emacs --daemon
 exec = ~/.config/hypr/scripts/set_wallpaper.sh
 
 monitor = HDMI-A-1,1920x1080@60,0x0,1
@@ -17,9 +17,10 @@ workspace = 2,eDP-1
 
 # Window Rules
 windowrulev2 = tile,workspace 7,nofullscreenrequest,class:^(Spotify)$
+windowrulev2 = tile,class:^(neovide)$
+windowrulev2 = float,title:^(.*MetaMask.*)$,class:^(firefox)$
 windowrulev2 = fullscreen,noborder,class:^(steam_app.*)$
 windowrulev2 = fullscreen,noborder,class:^(gamescope)$
-windowrulev2 = float,title:^(Extension: \(MetaMask\) - MetaMask Notification — Mozilla Firefox)$
 windowrulev2 = float,title:^(Developer\ Tools)(.*)$
 windowrulev2 = float,title:^(.*)(Emulator)(.*)$
 
@@ -118,11 +119,11 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # Applications
-bind = $mainMod, X, exec, alacritty
+bind = $mainMod, X, exec, kitty
 bind = $mainMod, E, exec, nemo
-bind = $mainMod, R, exec, rofi -show drun
+bind = $mainMod, R, exec, $HOME/.config/rofi/bin/launcher
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, C, exec, emacsclient -c
+bind = $mainMod, C, exec, WINIT_UNIX_BACKEND=x11 neovide
 #bind = $mainMod, C, exec, code
 bind = $mainMod, W, exec, ~/.config/hypr/scripts/windows.sh
 
