--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,13 +6,14 @@ exec-once = mailspring -b
 exec-once = ~/.config/hypr/scripts/launch-waybar.sh
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #exec-once=emacs --daemon
+exec-once=rog-control-center
 exec = ~/.config/hypr/scripts/set_wallpaper.sh
 
-monitor = HDMI-A-1,1920x1080@60,0x0,1
-monitor = eDP-1,1920x1080@144,1920x0,1.25
+#monitor = HDMI-A-1,1920x1080@60,0x0,1
+monitor = eDP-1,1920x1080@144,0x0,1.25
 
 # Initial Workspace Settings
-workspace = 1,HDMI-A-1
+#workspace = 1,HDMI-A-1
 workspace = 2,eDP-1
 
 # Window Rules
@@ -106,6 +107,7 @@ dwindle {
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = false
+    mfact = 0.5
 }
 
 gestures {
@@ -123,7 +125,7 @@ bind = $mainMod, X, exec, kitty
 bind = $mainMod, E, exec, nemo
 bind = $mainMod, R, exec, $HOME/.config/rofi/bin/launcher
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, C, exec, WINIT_UNIX_BACKEND=x11 neovide
+bind = $mainMod, C, exec, kitty -e "nvim"
 #bind = $mainMod, C, exec, code
 bind = $mainMod, W, exec, ~/.config/hypr/scripts/windows.sh
 
@@ -176,13 +178,21 @@ bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+
+bind = $mainMod SHIFT CTRL, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT CTRL, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT CTRL, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT CTRL, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT CTRL, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT CTRL, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT CTRL, 7, movetoworkspacesilent, 7
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
