Remove window rules from hyprland config

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -9,31 +9,20 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once=rog-control-center
 exec = ~/.config/hypr/scripts/set_wallpaper.sh
 
-#monitor = HDMI-A-1,1920x1080@60,0x0,1
-monitor = eDP-1,1920x1080@144,0x0,1.25
+monitor = HDMI-A-1,1920x1080@60,0x0,1
+monitor = eDP-1,1920x1080@144,1920x0,1.25
 
 # Initial Workspace Settings
-#workspace = 1,HDMI-A-1
+workspace = 1,HDMI-A-1
 workspace = 2,eDP-1
 
 # Window Rules
-windowrulev2 = tile,workspace 7,nofullscreenrequest,class:^(Spotify)$
-windowrulev2 = tile,class:^(neovide)$
-windowrulev2 = float,title:^(.*MetaMask.*)$,class:^(firefox)$
-windowrulev2 = fullscreen,noborder,class:^(steam_app.*)$
-windowrulev2 = fullscreen,noborder,class:^(gamescope)$
-windowrulev2 = float,title:^(Developer\ Tools)(.*)$
-windowrulev2 = float,title:^(.*)(Emulator)(.*)$
+#windowrulev2 = float,nofullscreenrequest,title:^(.*)(MetaMask)(.*)$
+#windowrulev2 = fullscreen,noborder,class:^(steam_app.*)$
+#windowrulev2 = fullscreen,noborder,class:^(gamescope)$
+#windowrulev2 = float,title:^(Developer Tools)(.*)$
+#windowrulev2 = float,title:^(.*)(Emulator)(.*)$
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
     kb_variant =
@@ -124,6 +113,7 @@ $mainMod = SUPER
 bind = $mainMod, X, exec, kitty
 bind = $mainMod, E, exec, nemo
 bind = $mainMod, R, exec, $HOME/.config/rofi/bin/launcher
+#bind = $mainMod, B, exec, MOZ_ENABLE_WAYLAND=0 firefox
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, C, exec, kitty -e "nvim"
 #bind = $mainMod, C, exec, code
