Update terminal configs

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -15,6 +15,15 @@ thm_black4="#585b70"
 thm_mantle="#181825"
 thm_overlay0="#6c7086"
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# session settings
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
 
 # status
 set -g status-interval 1
@@ -98,3 +107,4 @@ set -g mouse on
 
 # reload config file
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "~/.config/tmux/tmux.conf reloaded"
+run '~/.tmux/plugins/tpm/tpm'
