--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -30,44 +30,40 @@ set -g status-interval 1
 set -g escape-time 10
 set -g focus-events on
 set -g status "on"
-# set -g status-bg "${thm_bg}"
-set -g status-bg "${thm_mantle}"
+
+# TokyoNight colors for Tmux
+
+set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+
+set -g message-style "fg=#7aa2f7,bg=#3b4261"
+set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+
+set -g pane-border-style "fg=#3b4261"
+set -g pane-active-border-style "fg=#7aa2f7"
+
+set -g status "on"
 set -g status-justify "left"
+
+set -g status-style "fg=#7aa2f7,bg=#16161e"
+
 set -g status-left-length "100"
 set -g status-right-length "100"
 
-# messages
-set -g message-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
-set -g message-command-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+set -g status-left-style NONE
+set -g status-right-style NONE
 
-# panes
-set -g pane-border-style "fg=${thm_gray}"
-set -g pane-active-border-style "fg=${thm_blue}"
+set -g status-left "#[fg=#15161e,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#16161e,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics] #[fg=#7aa2f7,bg=#16161e] #{prefix_highlight} #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics] #[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d | %I:%M %p#[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics] #[fg=#15161e,bg=#7aa2f7,bold] #h "
 
-# windows
-setw -g window-status-activity-style "fg=${thm_fg},bg=${thm_mantle},none"
-setw -g window-status-separator "#[fg=${thm_gray},bg=${thm_mantle}]"
-setw -g window-status-style "fg=${thm_fg},bg=${thm_mantle},none"
+setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#16161e"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
+setw -g window-status-format "#[default] #I | #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#7aa2f7,bg=#3b4261,bold] #I | #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
 
-# status-line
-show_config="#[nobold,nounderscore,noitalics]"
-show_window="#[fg=$thm_pink,bg=$thm_mantle]#[fg=$thm_bg,bg=$thm_pink]#[fg=$thm_pink,bg=$thm_mantle]#[fg=$thm_fg,bg=$thm_mantle] #W "
-show_sessions="#[bg=$thm_mantle]#{?client_prefix,#[fg=$thm_red],#[fg=$thm_green]}#[fg=$thm_bg]#{?client_prefix,#[bg=$thm_red],#[bg=$thm_green]}#[bg=$thm_mantle]#{?client_prefix,#[fg=$thm_red],#[fg=$thm_green]}#[fg=$thm_fg,bg=$thm_mantle] #S "
-show_date_time="#[fg=$thm_blue,bg=$thm_mantle]#[fg=$thm_bg,bg=$thm_blue]#[fg=$thm_blue,bg=$thm_mantle]#[fg=$thm_fg,bg=$thm_mantle] %Y-%m-%d %H:%M:%S "
-
-set -g status-left ""
-set -g status-right "$show_config$show_window$show_sessions"
-
-# window-status
-show_directory_in_window_status="#[fg=$thm_blue,bg=$thm_mantle]#[nobold,nounderscore,noitalics]#[fg=$thm_bg,bg=$thm_blue]#I#[fg=$thm_blue,bg=$thm_mantle]#[fg=$thm_overlay0,bg=$thm_mantle] #{b:pane_current_path} "
-show_directory_in_window_status_current="#[fg=$thm_orange,bg=$thm_mantle]#[bold]#[fg=$thm_bg,bg=$thm_orange]#I#[fg=$thm_orange,bg=$thm_mantle]#[fg=$thm_fg,bg=$thm_mantle] #{b:pane_current_path} "
-
-setw -g window-status-format "${show_directory_in_window_status}"
-setw -g window-status-current-format "${show_directory_in_window_status_current}"
-
-# modes
-setw -g clock-mode-colour "${thm_blue}"
-setw -g mode-style "fg=${thm_pink} bg=${thm_black4} bold"
+# tmux-plugins/tmux-prefix-highlight support
+set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e] #[fg=#16161e]#[bg=#e0af68]"
+set -g @prefix_highlight_output_suffix " "
 
 # terminal colors
 # set  -g default-terminal "screen-256color"
@@ -84,10 +80,10 @@ unbind C-b
 set-option -g prefix C-p
 
 # switch pane
-bind -n M-Left select-pane -L
-bind -n M-Down select-pane -D
-bind -n M-Up select-pane -U
-bind -n M-Right select-pane -R
+bind  h select-pane -L
+bind  j select-pane -D
+bind  k select-pane -U
+bind  l select-pane -R
 
 # resize pane
 bind -n M-S-Left resize-pane -L 2
