--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -10,88 +10,41 @@ font:
   bold_italic:
     family: FiraCode Nerd Font Mono
 
+# TokyoNight Alacritty Colors
 colors:
+  # Default colors
   primary:
-    background: "#181825" # base
-    foreground: "#CDD6F4" # text
-    # Bright and dim foreground colors
-    dim_foreground: "#CDD6F4" # text
-    bright_foreground: "#CDD6F4" # text
-
-  # Cursor colors
-  cursor:
-    text: "#181825" # base
-    cursor: "#F5E0DC" # rosewater
-  vi_mode_cursor:
-    text: "#181825" # base
-    cursor: "#B4BEFE" # lavender
-
-  # Search colors
-  search:
-    matches:
-      foreground: "#181825" # base
-      background: "#A6ADC8" # subtext0
-    focused_match:
-      foreground: "#181825" # base
-      background: "#A6E3A1" # green
-    footer_bar:
-      foreground: "#181825" # base
-      background: "#A6ADC8" # subtext0
-
-  # Keyboard regex hints
-  hints:
-    start:
-      foreground: "#181825" # base
-      background: "#F9E2AF" # yellow
-    end:
-      foreground: "#181825" # base
-      background: "#A6ADC8" # subtext0
-
-  # Selection colors
-  selection:
-    text: "#181825" # base
-    background: "#F5E0DC" # rosewater
+    background: "0x1a1b27"
+    foreground: "0xc0caf5"
 
   # Normal colors
   normal:
-    black: "#45475A" # surface1
-    red: "#F38BA8" # red
-    green: "#A6E3A1" # green
-    yellow: "#F9E2AF" # yellow
-    blue: "#89B4FA" # blue
-    magenta: "#F5C2E7" # pink
-    cyan: "#94E2D5" # teal
-    white: "#BAC2DE" # subtext1
+    black: "0x15161e"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xa9b1d6"
 
   # Bright colors
   bright:
-    black: "#585B70" # surface2
-    red: "#F38BA8" # red
-    green: "#A6E3A1" # green
-    yellow: "#F9E2AF" # yellow
-    blue: "#89B4FA" # blue
-    magenta: "#F5C2E7" # pink
-    cyan: "#94E2D5" # teal
-    white: "#A6ADC8" # subtext0
-
-  # Dim colors
-  dim:
-    black: "#45475A" # surface1
-    red: "#F38BA8" # red
-    green: "#A6E3A1" # green
-    yellow: "#F9E2AF" # yellow
-    blue: "#89B4FA" # blue
-    magenta: "#F5C2E7" # pink
-    cyan: "#94E2D5" # teal
-    white: "#BAC2DE" # subtext1
+    black: "0x414868"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xc0caf5"
 
   indexed_colors:
-    - { index: 16, color: "#FAB387" }
-    - { index: 17, color: "#F5E0DC" }
-
+    - { index: 16, color: "0xff9e64" }
+    - { index: 17, color: "0xdb4b4b" }
 
 window:
-  opacity: 0.85
+  opacity: 0.8
   padding:
-    x: 10
-    y: 0
+    x: 5
+    y: 5
