--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,6 +11,7 @@ exec = ~/.config/hypr/scripts/set_wallpaper.sh
 
 monitor = HDMI-A-1,1920x1080@60,0x0,1
 monitor = eDP-1,1920x1080@144,1920x0,1.25
+#monitor = eDP-1,1920x1080@144,0x0,1.25
 
 # Initial Workspace Settings
 workspace = 1,HDMI-A-1
@@ -53,6 +54,8 @@ general {
     col.inactive_border = $crust
 
     layout = master
+
+    sensitivity = 0.5
 }
 
 decoration {
@@ -60,7 +63,7 @@ decoration {
 
     rounding = 5
     blur = yes
-    blur_size = 5
+    blur_size = 3
     blur_passes = 3
     active_opacity = 1.0
     inactive_opacity = 1.0
@@ -113,11 +116,10 @@ $mainMod = SUPER
 bind = $mainMod, X, exec, kitty
 bind = $mainMod, E, exec, nemo
 bind = $mainMod, R, exec, $HOME/.config/rofi/bin/launcher
-#bind = $mainMod, B, exec, MOZ_ENABLE_WAYLAND=0 firefox
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, C, exec, kitty -e "nvim"
-#bind = $mainMod, C, exec, code
+bind = $mainMod, C, exec, kitty -e "tmux"
 bind = $mainMod, W, exec, ~/.config/hypr/scripts/windows.sh
+#bind = $mainMod, B, exec, MOZ_ENABLE_WAYLAND=0 firefox
 
 # Audio
 binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
@@ -140,6 +142,7 @@ bind = $mainMod SHIFT, F, fullscreen
 bind = $mainMod SHIFT, L, exec, $HOME/.config/hypr/scripts/lock.sh
 bind = $mainMod SHIFT, Q, exec, hyprctl dispatch exit 0
 bind = $mainMod SHIFT, S, exec, wlogout
+bind = $mainMod SHIFT, R, exec, $HOME/.config/hypr/scripts/set_wallpaper.sh
 
 # Window Navigation
 bind = $mainMod,H,movefocus,l
@@ -152,10 +155,10 @@ bind = $mainMod CTRL,L,resizeactive,20 0
 bind = $mainMod CTRL,K,resizeactive,0 -20
 bind = $mainMod CTRL,J,resizeactive,0 20
 
-bind = $mainMod ALT,H,movewindow,l
-bind = $mainMod ALT,L,movewindow,r
-bind = $mainMod ALT,K,movewindow,u
-bind = $mainMod ALT,J,movewindow,d
+bind = $mainMod ALT,H,swapwindow,l
+bind = $mainMod ALT,L,swapwindow,r
+bind = $mainMod ALT,K,swapwindow,u
+bind = $mainMod ALT,J,swapwindow,d
 
 
 # Switch workspaces with mainMod + [0-9]
@@ -167,6 +170,10 @@ bind = $mainMod, 5, workspace, 5
 bind = $mainMod, 6, workspace, 6
 bind = $mainMod, 7, workspace, 7
 
+# Move workspace to a monitor
+bind = $mainMod CTRL, 1, movecurrentworkspacetomonitor, 0
+bind = $mainMod CTRL, 2, movecurrentworkspacetomonitor, 1
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -176,6 +183,7 @@ bind = $mainMod SHIFT, 5, movetoworkspace, 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
 
+# Move active window to a workspace with mainMod + SHIFT + CTRL + [0-9]
 bind = $mainMod SHIFT CTRL, 1, movetoworkspacesilent, 1
 bind = $mainMod SHIFT CTRL, 2, movetoworkspacesilent, 2
 bind = $mainMod SHIFT CTRL, 3, movetoworkspacesilent, 3
