--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,5 +1,4 @@
 #: FONTS
-
 font_family      FiraCode Nerd Font Mono
 bold_font        FiraCode Nerd Font Mono
 italic_font      FiraCode Nerd Font Mono
@@ -10,82 +9,55 @@ disable_ligatures always
 font_features FiraCodeNerdFontComplete-Regular +zero
 
 #: THEMING
+foreground #a9b1d6
+background #1a1b27
+
+# Black
+color0 #414868
+color8 #414868
+
+# Red
+color1 #f7768e
+color9 #f7768e
+
+# Green
+color2  #73daca
+color10 #73daca
+
+# Yellow
+color3  #e0af68
+color11 #e0af68
+
+# Blue
+color4  #7aa2f7
+color12 #7aa2f7
+
+# Magenta
+color5  #bb9af7
+color13 #bb9af7
+
+# Cyan
+color6  #7dcfff
+color14 #7dcfff
+
+# White
+color7  #c0caf5
+color15 #c0caf5
+
+# Cursor
+cursor #c0caf5
+cursor_text_color #1a1b26
 cursor_shape block
-shell_integration no-cursor
-cursor_blink_interval -1
-# The basic colors
-foreground              #CDD6F4
-background              #1E1E2E
-selection_foreground    #1E1E2E
-selection_background    #F5E0DC
 
-# Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
+# Selection highlight
+selection_foreground none
+selection_background #28344a
 
-# URL underline color when hovering with mouse
-url_color               #F5E0DC
-
-# Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
-bell_border_color       #F9E2AF
-
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
-
-# Tab bar colors
-active_tab_foreground   #11111B
-active_tab_background   #CBA6F7
-inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
-tab_bar_background      #11111B
-
-# Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #B4BEFE
-mark2_foreground #1E1E2E
-mark2_background #CBA6F7
-mark3_foreground #1E1E2E
-mark3_background #74C7EC
-
-# The 16 terminal colors
-
-# black
-color0 #45475A
-color8 #585B70
-
-# red
-color1 #F38BA8
-color9 #F38BA8
-
-# green
-color2  #A6E3A1
-color10 #A6E3A1
-
-# yellow
-color3  #F9E2AF
-color11 #F9E2AF
-
-# blue
-color4  #89B4FA
-color12 #89B4FA
-
-# magenta
-color5  #F5C2E7
-color13 #F5C2E7
-
-# cyan
-color6  #94E2D5
-color14 #94E2D5
-
-# white
-color7  #BAC2DE
-color15 #A6ADC8
+# The color for highlighting URLs on mouse-over
+url_color #9ece6a
 
 background_opacity 0.85
-window_padding_width 5
+window_padding_width 2
 
 #: BELL
 enable_audio_bell no
