Preparing for gentoo switch

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -2,11 +2,10 @@ source=~/.config/hypr/themes/mocha.conf
 exec-once = nm-applet --indicator
 exec-once = lxsession
 exec-once = blueman-applet
-exec-once = mailspring -b
 exec-once = ~/.config/hypr/scripts/launch-waybar.sh
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once=emacs --daemon
-exec-once=rog-control-center
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = rog-control-center
+exec-once= ~/.config/hypr/scripts/lock_on_sleep.sh
 exec = ~/.config/hypr/scripts/set_wallpaper.sh
 
 monitor = HDMI-A-1,1920x1080@60,0x0,1
@@ -41,7 +40,7 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    accel_profile = "adaptive"
+    accel_profile = "flat"
 }
 
 general {
