--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -5,7 +5,6 @@ exec-once = blueman-applet
 exec-once = ~/.config/hypr/scripts/launch-waybar.sh
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = rog-control-center
-exec-once= ~/.config/hypr/scripts/lock_on_sleep.sh
 exec = ~/.config/hypr/scripts/set_wallpaper.sh
 
 monitor = HDMI-A-1,1920x1080@60,0x0,1
@@ -22,6 +21,7 @@ workspace = 2,eDP-1
 #windowrulev2 = fullscreen,noborder,class:^(gamescope)$
 #windowrulev2 = float,title:^(Developer Tools)(.*)$
 #windowrulev2 = float,title:^(.*)(Emulator)(.*)$
+windowrulev2 = float,title:^(QEMU)$
 
 input {
     kb_layout = us
@@ -40,7 +40,23 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    accel_profile = "flat"
+    accel_profile = "adaptive"
+}
+
+device:razer-razer-deathadder-essential {
+           sensitivity = -1
+}
+
+device:razer-razer-deathadder-essential-1 {
+           sensitivity = -1
+}
+
+device:razer-razer-deathadder-essential-2 {
+           sensitivity = -1
+}
+
+device:razer-razer-deathadder-essential-3 {
+           sensitivity = -1
 }
 
 general {
@@ -149,10 +165,10 @@ bind = $mainMod,L,movefocus,r
 bind = $mainMod,K,movefocus,u
 bind = $mainMod,J,movefocus,d
 
-bind = $mainMod CTRL,H,resizeactive,-20 0
-bind = $mainMod CTRL,L,resizeactive,20 0
-bind = $mainMod CTRL,K,resizeactive,0 -20
-bind = $mainMod CTRL,J,resizeactive,0 20
+binde = $mainMod CTRL,H,resizeactive,-20 0
+binde = $mainMod CTRL,L,resizeactive,20 0
+binde = $mainMod CTRL,K,resizeactive,0 -20
+binde = $mainMod CTRL,J,resizeactive,0 20
 
 bind = $mainMod ALT,H,swapwindow,l
 bind = $mainMod ALT,L,swapwindow,r
