Use tmuxifier and update scripts

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -18,12 +18,7 @@ thm_overlay0="#6c7086"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-sessionist'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
-# session settings
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on'
+set -g @plugin 'jimeh/tmuxifier'
 
 # status
 set -g status-interval 1
@@ -80,10 +75,10 @@ unbind C-b
 set-option -g prefix C-p
 
 # switch pane
-bind  h select-pane -L
-bind  j select-pane -D
-bind  k select-pane -U
-bind  l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # resize pane
 bind -n M-S-Left resize-pane -L 2
