--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -19,6 +19,7 @@ thm_overlay0="#6c7086"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmuxifier'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # status
 set -g status-interval 1
@@ -73,12 +74,6 @@ set -sag terminal-features 'xterm*:extkeys'
 # change prefix key
 unbind C-b
 set-option -g prefix C-p
-
-# switch pane
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
 
 # resize pane
 bind -n M-S-Left resize-pane -L 2
