--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -5,6 +5,8 @@ exec-once = blueman-applet
 exec-once = ~/.config/hypr/scripts/launch-waybar.sh
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = rog-control-center
+exec-once = otd
+exec-once = wl-paste -p --watch wl-copy -pc
 exec = ~/.config/hypr/scripts/set_wallpaper.sh
 
 monitor = HDMI-A-1,1920x1080@60,0x0,1
@@ -77,11 +79,13 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 5
-    blur = yes
-    blur_size = 3
-    blur_passes = 3
+    blur {
+        enabled = yes
+        size = 3
+        passes = 3
+    }
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.97
 
     drop_shadow = no
     shadow_range = 4
