Bunch of changes

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -7,7 +7,7 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = rog-control-center
 exec-once = otd
 exec-once = wl-paste -p --watch wl-copy -pc
-exec = ~/.config/hypr/scripts/set_wallpaper.sh
+exec = ~/.config/hypr/scripts/random_wallpaper.sh
 
 monitor = HDMI-A-1,1920x1080@60,0x0,1
 monitor = eDP-1,1920x1080@144,1920x0,1.25
@@ -106,7 +106,7 @@ animations {
     animation = windowsMove, 1, 5, easeOutBack, slide
     animation = border, 0, 1, default
     animation = fade, 0, 1, default
-    animation = workspaces, 1, 5, default, slide
+    animation = workspaces, 1, 5, default, slidefade
 }
 
 dwindle {
@@ -136,13 +136,13 @@ bind = $mainMod, X, exec, kitty
 bind = $mainMod, E, exec, nemo
 bind = $mainMod, R, exec, wofi
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, C, exec, kitty -e "tmux"
+bind = $mainMod, C, exec, kitty -e "source ~/.zshenv && /home/jay/.local/bin/tmux-sessionizer.sh"
 bind = $mainMod, W, exec, ~/.config/hypr/scripts/windows.sh
 #bind = $mainMod, B, exec, MOZ_ENABLE_WAYLAND=0 firefox
 
 # Audio
-binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
-binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
+binde = , XF86AudioRaiseVolume, exec, pactl set-sink-mute @DEFAULT_SINK@ false && pactl set-sink-volume @DEFAULT_SINK@ +1%
+binde = , XF86AudioLowerVolume, exec, pactl set-sink-mute @DEFAULT_SINK@ false && pactl set-sink-volume @DEFAULT_SINK@ -1%
 binde = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # Player
@@ -161,7 +161,7 @@ bind = $mainMod SHIFT, F, fullscreen
 bind = $mainMod SHIFT, L, exec, $HOME/.config/hypr/scripts/lock.sh
 bind = $mainMod SHIFT, Q, exec, hyprctl dispatch exit 0
 bind = $mainMod SHIFT, S, exec, wlogout
-bind = $mainMod SHIFT, R, exec, $HOME/.config/hypr/scripts/set_wallpaper.sh
+bind = $mainMod SHIFT, R, exec, $HOME/.config/hypr/scripts/random_wallpaper.sh
 
 # Window Navigation
 bind = $mainMod,H,movefocus,l
