--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -6,7 +6,7 @@
     "margin-top": 10,
     "margin-right": 10,
     "margin-left": 10,
-    "modules-left": [ "custom/launcher","wlr/workspaces", "cpu", "memory"],
+    "modules-left": [ "custom/launcher","hyprland/workspaces", "cpu", "memory"],
     "modules-center": ["custom/spotify"],
     "modules-right": [
         "tray",
@@ -26,7 +26,7 @@
     "margin-top": 10,
     "margin-right": 10,
     "margin-left": 10,
-    "modules-left": [ "custom/launcher","wlr/workspaces", "cpu", "memory"],
+    "modules-left": [ "custom/launcher","hyprland/workspaces", "cpu", "memory"],
     "modules-center": ["hyprland/window"],
     "modules-right": [
         "tray",
