--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -7,11 +7,12 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = rog-control-center
 exec-once = otd
 exec-once = wl-paste -p --watch wl-copy -pc
+exec-once = asusctl -k off
 exec = ~/.config/hypr/scripts/random_wallpaper.sh
 
-monitor = HDMI-A-1,1920x1080@60,0x0,1
-monitor = eDP-1,1920x1080@144,1920x0,1.25
-#monitor = eDP-1,1920x1080@144,0x0,1.25
+#monitor = HDMI-A-1,1920x1080@60,0x0,1
+#monitor = eDP-1,1920x1080@144,1920x0,1.25
+monitor = eDP-1,1920x1080@144,0x0,1.25
 
 # Initial Workspace Settings
 workspace = 1,HDMI-A-1
@@ -42,7 +43,7 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    accel_profile = "adaptive"
+    accel_profile = "flat"
 }
 
 device:razer-razer-deathadder-essential {
@@ -150,9 +151,13 @@ bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
-# Brightness
+# Monitor Brightness
 binde = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 binde = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+
+# Keyboard Brightness
+bind = , XF86KbdBrightnessUp, exec , ~/.config/hypr/scripts/kb-bright-up.sh
+bind = , XF86KbdBrightnessDown, exec , ~/.config/hypr/scripts/kb-bright-down.sh
 
 # Hyprland nav
 bind = $mainMod, Q, killactive 
