--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -7,7 +7,7 @@
     "margin-right": 10,
     "margin-left": 10,
     "modules-left": [ "custom/launcher","hyprland/workspaces", "cpu", "memory"],
-    "modules-center": ["custom/spotify"],
+    "modules-center": ["hyprland/window"],
     "modules-right": [
         "tray",
         "backlight",
