--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 source=~/.config/hypr/themes/mocha.conf
 exec-once = nm-applet --indicator
-exec-once = lxsession
+exec-once = systemctl --user start polkit-gnome-authentication-agent-1
 exec-once = blueman-applet
 exec-once = ~/.config/hypr/scripts/launch-waybar.sh
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -8,11 +8,13 @@ exec-once = rog-control-center
 exec-once = otd
 exec-once = wl-paste -p --watch wl-copy -pc
 exec-once = asusctl -k off
+exec-once = asusd-user
+exec-once = hyprctl setcursor "Catppuccin-Mocha-Lavender-Cursors" 32
 exec = ~/.config/hypr/scripts/random_wallpaper.sh
 
-#monitor = HDMI-A-1,1920x1080@60,0x0,1
-#monitor = eDP-1,1920x1080@144,1920x0,1.25
-monitor = eDP-1,1920x1080@144,0x0,1.25
+monitor = HDMI-A-1,1920x1080@60,0x0,1
+monitor = eDP-1,1920x1080@144,1920x0,1.25
+#monitor = eDP-1,1920x1080@144,0x0,1.25
 
 # Initial Workspace Settings
 workspace = 1,HDMI-A-1
@@ -137,14 +139,18 @@ bind = $mainMod, X, exec, kitty
 bind = $mainMod, E, exec, nemo
 bind = $mainMod, R, exec, wofi
 bind = $mainMod, B, exec, firefox
-bind = $mainMod, C, exec, kitty -e "source ~/.zshenv && /home/jay/.local/bin/tmux-sessionizer.sh"
 bind = $mainMod, W, exec, ~/.config/hypr/scripts/windows.sh
 #bind = $mainMod, B, exec, MOZ_ENABLE_WAYLAND=0 firefox
 
+# Asus
+bind = , XF86Launch4, exec, asusctl profile -n
+bind = , XF86Launch3, exec, rog-control-center
+
 # Audio
-binde = , XF86AudioRaiseVolume, exec, pactl set-sink-mute @DEFAULT_SINK@ false && pactl set-sink-volume @DEFAULT_SINK@ +1%
-binde = , XF86AudioLowerVolume, exec, pactl set-sink-mute @DEFAULT_SINK@ false && pactl set-sink-volume @DEFAULT_SINK@ -1%
-binde = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+binde = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1.25 @DEFAULT_AUDIO_SINK@ 1%+
+binde = , XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Player
 bind = , XF86AudioPlay, exec, playerctl play-pause
@@ -152,7 +158,7 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
 # Monitor Brightness
-binde = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+binde = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
 binde = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 
 # Keyboard Brightness
