--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,3 +1,6 @@
+#: WINDOW DECORATIONS
+linux_display_server x11
+
 #: FONTS
 font_family      FiraCode Nerd Font Mono
 bold_font        FiraCode Nerd Font Mono
