Add starship config

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ config/tmux/plugins/*
 nix/nixos/result
 nix/nixos/hardware-configuration.nix
 scripts/.local/share/*
-scripts/.local/state/*
+scripts/.local/share/*
+scripts/.local/bin/*vcs*
