--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -70,6 +70,7 @@ set  -g default-terminal "tmux-256color"
 # enable CSI u
 set -g extended-keys on
 set -sag terminal-features 'xterm*:extkeys'
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # change prefix key
 unbind C-b
