--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -13,6 +13,7 @@ set -g status "on"
 
 set  -g default-terminal "tmux-256color"
 set -g @tokyo-night-tmux_pane_id_style dsquare
+set -g @tokyo-night-tmux_window_id_style dsquare
 
 # enable CSI u
 set -g extended-keys on
