--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin "jay-goyal/tokyo-night-tmux"
 
 # status
 set -g status-interval 1
@@ -12,8 +12,9 @@ set -g focus-events on
 set -g status "on"
 
 set  -g default-terminal "tmux-256color"
-set -g @tokyo-night-tmux_pane_id_style dsquare
-set -g @tokyo-night-tmux_window_id_style dsquare
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_window_id_style hsquare
+set -g @tokyo-night-tmux_show_music 0
 
 # enable CSI u
 set -g extended-keys on
