--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -22,8 +22,7 @@ set -sag terminal-features 'xterm*:extkeys'
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # change prefix key
-unbind C-b
-set-option -g prefix C-p
+set-option -g prefix C-b
 
 # resize pane
 bind -n M-S-Left resize-pane -L 2
@@ -34,6 +33,10 @@ bind -n M-S-Right resize-pane -R 2
 # split pane
 bind v split-window -h
 bind s split-window -v
+
+# pane indexing
+set -g base-index 1
+setw -g pane-base-index 1
 
 # kill pane
 bind q killp
