--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -50,7 +50,10 @@ color15 #c0caf5
 # Cursor
 cursor #c0caf5
 cursor_text_color #1a1b26
+shell_integration no-cursor
 cursor_shape block
+cursor_trail 1
+cursor_trail_decay 0.1 0.3
 
 # Selection highlight
 selection_foreground none
