Update config (breadcrumbs, LSP cleanup...)

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -66,6 +66,9 @@ background_opacity 0.9
 background_blur 1
 window_padding_width 2
 
-#: BELL
+# BELL
 enable_audio_bell no
 visual_bell_duration 0.0
+
+# Tmux clipboard fix
+clipboard_control write-primary write-clipboard no-append
