--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,11 +24,25 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 # change prefix key
 set-option -g prefix C-b
 
+# automatically renumber windows
+set-option -g renumber-windows on
+
+# vim keybindings
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key ! break-pane -d -n _hidden_pane
+bind-key @ join-pane -s $.0
+
+# floating terminal
+bind-key j run-shell "~/.local/bin/popup_tmux.sh"
+
 # resize pane
-bind -n M-S-Left resize-pane -L 2
-bind -n M-S-Down resize-pane -D 2
-bind -n M-S-Up resize-pane -U 2
-bind -n M-S-Right resize-pane -R 2
+bind -n M-h resize-pane -L 2
+bind -n M-j resize-pane -D 2
+bind -n M-k resize-pane -U 2
+bind -n M-l resize-pane -R 2
 
 # split pane
 bind v split-window -h
