--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,7 +11,7 @@ set -g escape-time 10
 set -g focus-events on
 set -g status "on"
 
-set  -g default-terminal "tmux-256color"
+set -g default-terminal "xterm"
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_window_id_style hsquare
 set -g @tokyo-night-tmux_show_music 0
