Rounded border for tmux popup

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,6 +11,9 @@ set -g escape-time 10
 set -g focus-events on
 set -g status "on"
 
+# popup border color
+set -g popup-border-style "fg=#7AA2F7"
+
 set -g default-terminal "xterm"
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_window_id_style hsquare
