Minor update to oh my posh config

--- a/oh-my-posh/.config/oh-my-posh/tokyonight.omp.toml
+++ b/oh-my-posh/.config/oh-my-posh/tokyonight.omp.toml
@@ -45,7 +45,7 @@ type = 'prompt'
 alignment = 'left'
 
 [[blocks.segments]]
-template = '<p:light-sky-blue> </><b>{{ .Path }} </b>'
+template = ' <b>{{ .Path }} </b>'
 foreground = 'p:terminal-magenta'
 type = 'path'
 style = 'plain'
