--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,15 +14,15 @@ set -g status "on"
 # popup border color
 set -g popup-border-style "fg=#7AA2F7"
 
-set -g default-terminal "xterm"
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_window_id_style hsquare
 set -g @tokyo-night-tmux_show_music 0
 
 # enable CSI u
 set -g extended-keys on
-set -sag terminal-features 'xterm*:extkeys'
-set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -sa terminal-overrides ",*:Tc"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 # change prefix key
 set-option -g prefix C-b
