Update tmux popup script

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -40,6 +40,7 @@ bind-key @ join-pane -s $.0
 
 # floating terminal
 bind-key j run-shell "~/.local/bin/popup_tmux.sh"
+bind-key k run-shell "~/.local/bin/popup_tmux_common.sh"
 
 # resize pane
 bind -n M-h resize-pane -L 2
