--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 config/tmux/plugins/*
-nix/nixos/result
-nix/nixos/hardware-configuration.nix
 scripts/.local/share/*
 scripts/.local/share/*
 *back
-scripts/.local/bin
-!/scripts/.local/bin/popup_tmux.sh
-!/scripts/.local/bin/tmux-sessionizer.sh
+scripts/.local/bin/*
+!scripts/.local/bin/popup_tmux.sh
+!scripts/.local/bin/popup_tmux_common.sh
+!scripts/.local/bin/tmux-sessionizer.sh
