Add tmux fzf session switching capabilities

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,7 +3,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin "jay-goyal/tokyo-night-tmux"
+set -g @plugin 'jay-goyal/tokyo-night-tmux'
+set -g @plugin 'vndmp4/tmux-fzf-session-switch'
 
 # status
 set -g status-interval 1
@@ -14,9 +15,20 @@ set -g status "on"
 # popup border color
 set -g popup-border-style "fg=#7AA2F7"
 
+# theme
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_window_id_style hsquare
 set -g @tokyo-night-tmux_show_music 0
+set -g @tokyo-night-tmux_transparent 0
+set -g @tokyo-night-tmux_show_path 0
+set -g @tokyo-night-tmux_show_battery_widget 0
+set -g @tokyo-night-tmux_show_hostname 0
+
+# fzf integration
+set -g @fzf-goto-session 'C-f'
+set -g @fzf-goto-win-width-preview 80%
+set -g @fzf-goto-win-height-preview 80%
+set -g @fzf-goto-preview-enabled 'true'
 
 # enable CSI u
 set -g extended-keys on
